--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,13 @@
+* {
+  scrollbar-color: #f0ac78 #ffe6cc; /* Thumb color and track color */
+  scrollbar-width: thin; /* Makes scrollbar thinner */
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +15,6 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  overflow-y: scroll;
+ 
 }
